# rivet

./: .gitignore  .gitlab-ci.yml  .hgignore  .mailmap  ChangeLog  Doxyfile.in  H1_2013_I1217865.cc  H1_2013_I1217865.info  Makefile.am  README  README.md  configure.ac  countanas  rivetenv.sh.in
include/Rivet/: Analysis.hh  AnalysisHandler.hh  AnalysisInfo.hh  AnalysisLoader.hh  Event.hh  Jet.fhh  Jet.hh  Makefile.am  Particle.fhh  Particle.hh  ParticleBase.hh  Projection.hh  ProjectionApplier.hh  ProjectionHandler.hh  Run.hh
include/Rivet/Analyses/: MC_Cent_pPb.hh  MC_JetAnalysis.hh  MC_JetSplittings.hh  MC_ParticleAnalysis.hh
include/Rivet/Config/: RivetConfig.hh.in
include/Rivet/Math/: LorentzTrans.hh  MathHeader.hh  MathUtils.hh  Matrix3.hh  MatrixDiag.hh  MatrixN.hh  Vector2.hh  Vector3.hh  Vector4.hh  VectorN.hh
include/Rivet/Projections/: AliceCommon.hh  AxesDefinition.hh  Beam.hh  BeamThrust.hh  CentralEtHCM.hh  CentralityProjection.hh  ChargedFinalState.hh  ConstLossyFinalState.hh  DISDiffHadron.hh  DISFinalState.hh  DISKinematics.hh  DISLepton.hh  DISRapidityGap.hh  DecayedParticles.hh  DressedLeptons.hh  EventMixingFinalState.hh  FParameter.hh  FastJets.hh  FinalState.hh  GammaGammaFinalState.hh  GammaGammaKinematics.hh  GammaGammaLeptons.hh  GeneratedPercentileProjection.hh  HTT.hh  HadronicFinalState.hh  HeavyHadrons.hh  Hemispheres.hh  HepMCHeavyIon.hh  IdentifiedFinalState.hh  ImpactParameterProjection.hh  InitialQuarks.hh  InvMassFinalState.hh  InvisibleFinalState.hh  JetAlg.hh  JetFinder.hh  JetShape.hh  LeadingParticlesFinalState.hh  LeptonClusters.hh  LossyFinalState.hh  METFinder.hh  (+29 more)
include/Rivet/Tools/: AtlasCommon.hh  BeamConstraint.hh  Beams.hh  Cmp.fhh  Cmp.hh  Correlators.hh  Cutflow.hh  Cuts.hh  JetSmearingFunctions.hh  JetUtils.hh  Logging.hh  MCBot_tagger.hh  MendelMin.hh  ParticleBaseUtils.hh  ParticleIdUtils.hh  ParticleName.hh  ParticleUtils.hh  ProjectionTreePlotter.hh  RHICCommon.hh  ReaderCompressedAscii.hh  RivetFastJet.hh  RivetHDF5.hh  RivetHTT.hh  RivetHepMC.hh  RivetLWTNN.hh  RivetONNXrt.hh  RivetORT.hh  RivetPaths.hh  RivetSTL.hh  RivetYODA.hh  SmearingFunctions.hh  TypeTraits.hh  Utils.hh  WriterCompressedAscii.hh
pyext/: Makefile.am  build.py.in  setup.py.in
pyext/rivet/: Makefile.am  __init__.py  aopaths.py  core.pyx  hepdatautils.py  plotinfo.py  rivet.pxd  rivetcmp.py
pyext/rivet/hepdatapatches/: ALEPH_1996_I415745.py  ALICE_2019_I1735351.py  ALICE_2021_I1898832.py  ARGUS_1987_I248680.py  ARGUS_1988_I262713.py  ARGUS_1989_I266416.py  ARGUS_1989_I267759.py  ARGUS_1994_I372451.py  ARGUS_1997_I420421.py  ATLAS_2013_I1190187.py  ATLAS_2016_I1468168.py  ATLAS_2018_I1615866.py  ATLAS_2018_I1622737.py  ATLAS_2018_I1635273.py  ATLAS_2019_I1720438.py  ATLAS_2019_I1734263.py  ATLAS_2019_I1746286.py  ATLAS_2022_I2077570.py  BABAR_2001_I558091.py  BABAR_2006_I731865.py  BABAR_2016_I1391152.py  BELLE_2009_I815978.py  BELLE_2009_I822474.py  BELLE_2009_I823878.py  CDF_1997_I440101.py  CDF_1997_I440446.py  CELLO_1989_I267081.py  CLEO_1984_I193577.py  CLEO_1994_I358510.py  CLEO_1994_I359316.py  CLEO_1998_I445351.py  CMS_2011_I878118.py  CMS_2011_I883318.py  CMS_2012_I1113442.py  CMS_2013_I1225274.py  CMS_2015_I1342266.py  CMS_2016_I1487288.py  CMS_2017_I1485195.py  CMS_2019_I1697571.py  CRYSTAL_BALL_1988_I261078.py  (+27 more)
pyext/rivet/plot/: execPyScript.py  rivet_mkdat.py  rivet_plot.py  rivet_plot1d.py  rivet_plot2d.py  writePyScript.py  writePyScript_fetchData.py
src/: Makefile.am
src/Analyses/: ALEPH_2004_S5765862.cc  ALICE_2012_I1181770.cc  ATLAS_2010_CONF_2010_049.cc  ATLAS_2011_I894867.cc  ATLAS_2011_I896268.cc  ATLAS_2011_I9035664.cc  ATLAS_2011_I926145.cc  ATLAS_2011_I930220.cc  ATLAS_2011_I944826.cc  ATLAS_2011_I945498.cc  ATLAS_2011_I954993.cc  ATLAS_2011_S9108483.cc  ATLAS_2012_CONF_2012_001.cc  ATLAS_2012_CONF_2012_103.cc  ATLAS_2012_CONF_2012_104.cc  ATLAS_2012_CONF_2012_105.cc  ATLAS_2012_CONF_2012_109.cc  ATLAS_2012_CONF_2012_153.cc  ATLAS_2012_I1084540.cc  ATLAS_2012_I1091481.cc  ATLAS_2012_I1093734.cc  ATLAS_2012_I1093738.cc  ATLAS_2012_I1094564.cc  ATLAS_2012_I1094568.cc  ATLAS_2012_I1117704.cc  ATLAS_2012_I1118269.cc  ATLAS_2012_I1119557.cc  ATLAS_2012_I1125575.cc  ATLAS_2012_I1125961.cc  ATLAS_2012_I1126136.cc  ATLAS_2012_I1180197.cc  ATLAS_2012_I1183818.cc  ATLAS_2012_I1186556.cc  ATLAS_2012_I1188891.cc  ATLAS_2012_I1190891.cc  ATLAS_2012_I1204784.cc  ATLAS_2013_I1217867.cc  ATLAS_2013_I1230812.cc  ATLAS_2013_I1243871.cc  BABAR_2003_I593379.cc  (+54 more)
src/AnalysisTools/: MC_JetAnalysis.cc
src/Core/: Analysis.cc  AnalysisHandler.cc  AnalysisInfo.cc  AnalysisLoader.cc  Event.cc  Jet.cc  Makefile.am  Particle.cc  Projection.cc  ProjectionApplier.cc  ProjectionHandler.cc  Run.cc
src/Core/yamlcpp/: Makefile.am  binary.cpp  convert.cpp  depthguard.cpp  directives.cpp  emit.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.h  exceptions.cpp  exp.cpp  exp.h  memory.cpp  node.cpp  node_data.cpp  nodebuilder.cpp  (+23 more)
src/Projections/: Beam.cc  CentralEtHCM.cc  ChargedFinalState.cc  ChargedLeptons.cc  DISDiffHadron.cc  DISKinematics.cc  DISLepton.cc  DISRapidityGap.cc  DecayedParticles.cc  DressedLeptons.cc  FParameter.cc  FastJets.cc  FinalState.cc  GammaGammaFinalState.cc  GammaGammaKinematics.cc  GammaGammaLeptons.cc  HTT.cc  HadronicFinalState.cc  HeavyHadrons.cc  Hemispheres.cc  HepMCHeavyIon.cc  IdentifiedFinalState.cc  InvMassFinalState.cc  InvisibleFinalState.cc  JetFinder.cc  JetShape.cc  LeadingParticlesFinalState.cc  LeptonClusters.cc  Makefile.am  MergedFinalState.cc  MissingMomentum.cc  NeutralFinalState.cc  NonHadronicFinalState.cc  NonPromptFinalState.cc  ParisiTensor.cc  PrimaryHadrons.cc  PrimaryParticles.cc  PromptFinalState.cc  PxConePlugin.cc  Sphericity.cc  (+9 more)
src/Tools/: Beams.cc  BinnedHistogram.cc  Correlators.cc  Cuts.cc  HEPTopTagger.hh  Logging.cc  MCBot_tagger.cc  Makefile.am  ParticleName.cc  ParticleUtils.cc  ProjectionTreePlotter.cc  ReaderCompressedAscii.cc  RivetAIDA.cc  RivetHDF5.cc  RivetHepMC_2.cc  RivetHepMC_3.cc  RivetMT2.cc  RivetYODA.cc  WriterCompressedAscii.cc
(+7899 files in other folders)
